@@ -169,7 +169,7 @@
                     <forkCount>1C</forkCount>
                     <reuseForks>true</reuseForks>
 
-                    <threadCount>4</threadCount>
+                    <threadCount>3</threadCount>
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <parallel>methods</parallel>
 
@@ -194,14 +194,37 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
-                        <configuration>
+                        <configuration combine.self="override">
                             <parallel>none</parallel>
                             <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M
                                 -Dhazelcast.version.check.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
                             </argLine>
                             <groups>com.hazelcast.test.annotation.NetworkTest</groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>all</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <parallel>none</parallel>
+                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -228,6 +251,20 @@
             <groupId>spy</groupId>
             <artifactId>spymemcached</artifactId>
             <version>2.8.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- dependencies for benchmarking -->
+        <dependency>
+            <groupId>com.carrotsearch</groupId>
+            <artifactId>junit-benchmarks</artifactId>
+            <version>${junit-benchmarks.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
